Add SQLite functionality

--- a/Pages/CollectibleTicketDisplay.razor
+++ b/Pages/CollectibleTicketDisplay.razor
@@ -1,5 +1,7 @@
 ﻿@* Displays a MudCard for each ticket in the database. *@
 @using CollectibleMovieTicketDB.Model
+@inject HttpClient HttpClient
+@inject NavigationManager NavigationManager
 
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.Medium">
     @if (tickets == null)
@@ -53,108 +55,8 @@
 @code {
     List<CollectibleTicket> tickets = new();
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        tickets.AddRange(new List<CollectibleTicket>
-        {
-            new CollectibleTicket {
-                MovieTitle = "Avatar: The Way of Water",
-                Rerelease = false,
-                CollectorNumber = 85,
-                ShowingDate = "2022.12.14",
-                Variant = 1,
-                EstimatedEbaySalePrice = 100,
-                ImageUrl = "images/tickets/Avatar-The-Way-of-Water_1.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Avatar: The Way of Water",
-                Rerelease = false,
-                CollectorNumber = 85,
-                ShowingDate = "2022.12.14",
-                Variant = 2,
-                EstimatedEbaySalePrice = 100,
-                ImageUrl = "images/tickets/Avatar-The-Way-of-Water_2.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Birds of Prey",
-                Rerelease = false,
-                CollectorNumber = 14,
-                ShowingDate = "2020.02.05",
-                Variant = 1,
-                EstimatedEbaySalePrice = 80,
-                ImageUrl = "images/tickets/Birds-of-Prey-Harley-Quinn_1.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Birds of Prey",
-                Rerelease = false,
-                CollectorNumber = 14,
-                ShowingDate = "2020.02.05",
-                Variant = 2,
-                EstimatedEbaySalePrice = 80,
-                ImageUrl = "images/tickets/Birds-of-Prey-Harley-Quinn_2.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Tenet",
-                Rerelease = false,
-                CollectorNumber = 19,
-                ShowingDate = "2020.08.26",
-                Variant = 1,
-                EstimatedEbaySalePrice = 60,
-                ImageUrl = "images/tickets/Tenet_1.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Tenet",
-                Rerelease = false,
-                CollectorNumber = 19,
-                ShowingDate = "2020.08.26",
-                Variant = 2,
-                EstimatedEbaySalePrice = 60,
-                ImageUrl = "images/tickets/Tenet_2.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "The Batman",
-                Rerelease = false,
-                CollectorNumber = 48,
-                ShowingDate = "2022.03.01",
-                Variant = 1,
-                EstimatedEbaySalePrice = 100,
-                ImageUrl = "images/tickets/The-Batman_1.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "The Batman",
-                Rerelease = false,
-                CollectorNumber = 48,
-                ShowingDate = "2022.03.01",
-                Variant = 2,
-                EstimatedEbaySalePrice = 100,
-                ImageUrl = "images/tickets/The-Batman_2.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Thor: Love and Thunder",
-                Rerelease = false,
-                CollectorNumber = 57,
-                ShowingDate = "2022.07.06",
-                Variant = 1,
-                EstimatedEbaySalePrice = 90,
-                ImageUrl = "images/tickets/Thor-Love-and-Thunder_1.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Thor: Love and Thunder",
-                Rerelease = false,
-                CollectorNumber = 57,
-                ShowingDate = "2022.07.06",
-                Variant = 2,
-                EstimatedEbaySalePrice = 90,
-                ImageUrl = "images/tickets/Thor-Love-and-Thunder_2.jpg"
-            },
-            new CollectibleTicket {
-                MovieTitle = "Your Name",
-                Rerelease = true,
-                CollectorNumber = 7,
-                ShowingDate = "2021.09.09",
-                EstimatedEbaySalePrice = 120,
-                ImageUrl = "images/tickets/Your-Name.jpg"
-            }
-        });
+        tickets = await HttpClient.GetFromJsonAsync<List<CollectibleTicket>>(NavigationManager.BaseUri + "tickets");
     }
 }
