Add variant info for unique tickets

--- a/Pages/CollectibleTicketDisplay.razor
+++ b/Pages/CollectibleTicketDisplay.razor
@@ -31,6 +31,10 @@
                             {
                                 <MudText Typo="Typo.body2"><b>Variant:</b> @ticket.Variant</MudText>
                             }
+                            else
+                            {
+                                <MudText Typo="Typo.body2"><b>Variant:</b> Unique</MudText>
+                            }
                             <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ @ticket.EstimatedEbaySalePrice</MudText>
 
                             @* Collector Chip *@
