--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,21 +8,26 @@
     <MudAppBar Elevation="0">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
+
         <MudTooltip Arrow="true" Color="Color.Info" Text="CMTdb's GitHub Repo">
             <MudIconButton
                 Icon="@Icons.Custom.Brands.GitHub"
                 Color="Color.Inherit"
                 Link="https://github.com/dbyrne978/CollectibleMovieTicketDB/"
-                Target="_blank" />
+                Target="_blank"
+            />
         </MudTooltip>
+
         <MudTooltip Arrow="true" Color="Color.Info" Text="Daniel Byrne's Portfolio">
             <MudIconButton
                 Icon="@Icons.Material.Filled.FolderSpecial"
                 Color="Color.Inherit"
                 Variant="Variant.Outlined"
                 Link="https://danielbyrne.dev/"
-                Target="_blank" />
+                Target="_blank"
+            />
         </MudTooltip>
+
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
