--- a/Pages/AddTicket.razor
+++ b/Pages/AddTicket.razor
@@ -17,7 +17,7 @@
                     <MudTextField T="string" Label="Movie Title" Required="true" RequiredError="Movie Title is required!" @bind-Value="@prototypeTicket.MovieTitle" />
                     <MudDatePicker Label="Showing Date" Required="true" RequiredError="Showing Date is required!" />
                     <div class="d-flex">
-                        <MudTextField T="string" Label="Collector Number" Required="true" RequiredError="Collector Number is required!" />
+                        <MudTextField T="int" Label="Collector Number" Required="true" RequiredError="Collector Number is required!" @bind-Value="@prototypeTicket.CollectorNumber" />
                         <MudTextField T="string" Label="Variant" />
                     </div>
                     <MudTextField T="string" Label="Estimated Secondary Market Value (in USD)" Required="true" RequiredError="This field is required!" />
@@ -38,7 +38,7 @@
 
                     @* Card Body *@
                     <MudText Typo="Typo.body2"><b>Showing Date:</b> 0000.00.00</MudText>
-                    <MudText Typo="Typo.body2"><b>Collector Number:</b> No. 00</MudText>
+                    <MudText Typo="Typo.body2"><b>Collector Number:</b> No. @prototypeTicket.CollectorNumber</MudText>
                     <MudText Typo="Typo.body2"><b>Variant:</b> 0</MudText>
                     <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ 000</MudText>
 
@@ -46,7 +46,7 @@
                     <MudChip Label="true"
                              Color="Color.Primary"
                              Size="Size.Large">
-                        #00 (0)
+                        #@prototypeTicket.CollectorNumber (0)
                     </MudChip>
                 </MudCardContent>
             </MudCard>
