--- a/Pages/AddTicket.razor
+++ b/Pages/AddTicket.razor
@@ -20,7 +20,7 @@
                         <MudTextField T="int" Label="Collector Number" Required="true" RequiredError="Collector Number is required!" @bind-Value="@prototypeTicket.CollectorNumber" />
                         <MudTextField T="string" Label="Variant" />
                     </div>
-                    <MudTextField T="string" Label="Estimated Secondary Market Value (in USD)" Required="true" RequiredError="This field is required!" />
+                    <MudTextField T="int" Label="Estimated Secondary Market Value (in USD)" Required="true" RequiredError="This field is required!" @bind-Value="@prototypeTicket.EstimatedEbaySalePrice" />
                     <div class="d-flex align-center justify-space-between">
                         <MudCheckBox T="bool" Label="Re-Release" />
                         <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" Class="ml-auto" OnClick="OnValidSubmit">Submit</MudButton>
@@ -40,7 +40,7 @@
                     <MudText Typo="Typo.body2"><b>Showing Date:</b> 0000.00.00</MudText>
                     <MudText Typo="Typo.body2"><b>Collector Number:</b> No. @prototypeTicket.CollectorNumber</MudText>
                     <MudText Typo="Typo.body2"><b>Variant:</b> 0</MudText>
-                    <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ 000</MudText>
+                    <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ @prototypeTicket.EstimatedEbaySalePrice</MudText>
 
                     @* Collector Chip *@
                     <MudChip Label="true"
