Format code to fit under 100 char/line suggested limit

--- a/Pages/AddTicket.razor
+++ b/Pages/AddTicket.razor
@@ -6,24 +6,59 @@
 
 <PageTitle>CMTdb - Add Ticket</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true" Align="Align.Center">Add Ticket to DB</MudText>
+<MudText Typo="Typo.h3" GutterBottom="true" Align="Align.Center">
+    Add Ticket to DB
+</MudText>
 
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.Medium">
     <MudGrid Justify="Justify.Center">
 
         <MudItem xs="12" sm="5">
             <MudPaper Class="pa-4">
-                <MudForm @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
-                    <MudTextField T="string" Label="Movie Title" Required="true" RequiredError="Movie Title is required!" @bind-Value="@prototypeTicket.MovieTitle" />
-                    <MudDatePicker Label="Showing Date" Required="true" RequiredError="Showing Date is required!" />
+                <MudForm
+                    @ref="form" @bind-IsValid="@success"
+                    @bind-Errors="@errors"
+                >
+                    <MudTextField
+                        T="string"
+                        Label="Movie Title"
+                        Required="true"
+                        RequiredError="Movie Title is required!"
+                        @bind-Value="@prototypeTicket.MovieTitle"
+                    />
+                    <MudDatePicker
+                        Label="Showing Date"
+                        Required="true"
+                        RequiredError="Showing Date is required!"
+                    />
                     <div class="d-flex">
-                        <MudTextField T="int" Label="Collector Number" Required="true" RequiredError="Collector Number is required!" @bind-Value="@prototypeTicket.CollectorNumber" />
+                        <MudTextField
+                            T="int"
+                            Label="Collector Number"
+                            Required="true"
+                            RequiredError="Collector Number is required!"
+                            @bind-Value="@prototypeTicket.CollectorNumber"
+                        />
                         <MudTextField T="string" Label="Variant" />
                     </div>
-                    <MudTextField T="int" Label="Estimated Secondary Market Value (in USD)" Required="true" RequiredError="This field is required!" @bind-Value="@prototypeTicket.EstimatedEbaySalePrice" />
+                    <MudTextField
+                        T="int"
+                        Label="Estimated Secondary Market Value (in USD)"
+                        Required="true"
+                        RequiredError="This field is required!"
+                        @bind-Value="@prototypeTicket.EstimatedEbaySalePrice"
+                    />
                     <div class="d-flex align-center justify-space-between">
                         <MudCheckBox T="bool" Label="Re-Release" />
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" Class="ml-auto" OnClick="OnValidSubmit">Submit</MudButton>
+                        <MudButton
+                            Variant="Variant.Filled"
+                            Color="Color.Primary"
+                            Disabled="@(!success)"
+                            Class="ml-auto"
+                            OnClick="OnValidSubmit"
+                        >
+                            Submit
+                        </MudButton>
                     </div>
                 </MudForm>
             </MudPaper>
@@ -31,16 +66,24 @@
 
         <MudItem xs="12" sm="3">
             <MudCard>
-                <MudCardMedia Image="images/tickets/Placeholder-Image.jpg" Height="200" />
+                <MudCardMedia
+                    Image="images/tickets/Placeholder-Image.jpg"
+                    Height="200"
+                />
                 <MudCardContent>
                     @* Card Title *@
                     <MudText Typo="Typo.h5">@prototypeTicket.MovieTitle</MudText>
 
                     @* Card Body *@
                     <MudText Typo="Typo.body2"><b>Showing Date:</b> 0000.00.00</MudText>
-                    <MudText Typo="Typo.body2"><b>Collector Number:</b> No. @prototypeTicket.CollectorNumber</MudText>
+                    <MudText Typo="Typo.body2">
+                        <b>Collector Number:</b> No. @prototypeTicket.CollectorNumber
+                    </MudText>
                     <MudText Typo="Typo.body2"><b>Variant:</b> 0</MudText>
-                    <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ @prototypeTicket.EstimatedEbaySalePrice</MudText>
+                    <MudText Typo="Typo.body2">
+                        <b>Estimated Secondary Market Value:</b> 
+                        $ @prototypeTicket.EstimatedEbaySalePrice
+                    </MudText>
 
                     @* Collector Chip *@
                     <MudChip Label="true"
