--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,11 +2,13 @@
 
 <PageTitle>CMTdb</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Welcome to the Collectible Movie Ticket Database (CMTdb)!</MudText>
+<MudText Typo="Typo.h3" GutterBottom="true">
+    Welcome to the Collectible Movie Ticket Database (CMTdb)!
+</MudText>
 <MudText Class="mb-8">
-    During the COVID-19 pandemic, Megabox theaters in South Korea started distributing these beautiful collectible tickets 
-    to loyal moviegoers who attended the early showings of theatrical releases. This database is being created to document 
-    these collectibles in their entirety.
+    During the COVID-19 pandemic, Megabox theaters in South Korea started distributing these 
+    beautiful collectible tickets to loyal moviegoers who attended the early showings of theatrical 
+    releases. This database is being created to document these collectibles in their entirety.
 </MudText>
 
 <CollectibleTicketDisplay />
