--- a/Pages/CollectibleTicketDisplay.razor
+++ b/Pages/CollectibleTicketDisplay.razor
@@ -21,12 +21,16 @@
                             <MudText Typo="Typo.h5">@ticket.MovieTitle</MudText>
 
                             @* Card Body *@
-                            <MudText Typo="Typo.body2"><b>Showing Date:</b> @ticket.ShowingDate</MudText>
+                            <MudText Typo="Typo.body2">
+                                <b>Showing Date:</b> @ticket.ShowingDate
+                            </MudText>
                             @{
                                 string collectorTag = ticket.Rerelease ? "Re. " : "No. ";
                                 string fullCollectorNumber = collectorTag + ticket.CollectorNumber;
                             }
-                            <MudText Typo="Typo.body2"><b>Collector Number:</b> @fullCollectorNumber</MudText>
+                            <MudText Typo="Typo.body2">
+                                <b>Collector Number:</b> @fullCollectorNumber
+                            </MudText>
                             @if (ticket.Variant != null)
                             {
                                 <MudText Typo="Typo.body2"><b>Variant:</b> @ticket.Variant</MudText>
@@ -35,13 +39,18 @@
                             {
                                 <MudText Typo="Typo.body2"><b>Variant:</b> Unique</MudText>
                             }
-                            <MudText Typo="Typo.body2"><b>Estimated Secondary Market Value:</b> $ @ticket.EstimatedEbaySalePrice</MudText>
+                            <MudText Typo="Typo.body2">
+                                <b>Estimated Secondary Market Value:</b> 
+                                $ @ticket.EstimatedEbaySalePrice
+                            </MudText>
 
                             @* Collector Chip *@
                             @{
                                 string chipTag = ticket.Rerelease ? "RE " : "";
-                                string chipVariant = ticket.Variant == null ? "" : " (" + ticket.Variant + ")";
-                                string chipNumber = chipTag + "#" + ticket.CollectorNumber + chipVariant;
+                                string chipVariant = ticket.Variant == null ? "" : " (" + 
+                                    ticket.Variant + ")";
+                                string chipNumber = chipTag + "#" + 
+                                    ticket.CollectorNumber + chipVariant;
                             }
                             <MudChip Label="true"
                              Color="Color.Primary"
@@ -61,6 +70,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        tickets = await HttpClient.GetFromJsonAsync<List<CollectibleTicket>>(NavigationManager.BaseUri + "tickets");
+        tickets = await HttpClient.GetFromJsonAsync<List<CollectibleTicket>>(
+            NavigationManager.BaseUri + "tickets"
+        );
     }
 }
