Change ShowingDate formatting in CollectibleTicketDisplay

--- a/Pages/CollectibleTicketDisplay.razor
+++ b/Pages/CollectibleTicketDisplay.razor
@@ -22,7 +22,7 @@
 
                             @* Card Body *@
                             <MudText Typo="Typo.body2">
-                                <b>Showing Date:</b> @ticket.ShowingDate
+                                <b>Showing Date:</b> @ticket.ShowingDate.ToString("yyyy.MM.dd")
                             </MudText>
                             @{
                                 string collectorTag = ticket.Rerelease ? "Re. " : "No. ";
