--- a/Pages/AddTicket.razor
+++ b/Pages/AddTicket.razor
@@ -40,7 +40,10 @@
                             RequiredError="Collector Number is required!"
                             @bind-Value="@prototypeTicket.CollectorNumber"
                         />
-                        <MudTextField T="string" Label="Variant" />
+                        <MudTextField
+                            T="int?"
+                            Label="Variant"
+                            @bind-Value="@prototypeTicket.Variant" />
                     </div>
                     <MudTextField
                         T="int"
@@ -83,7 +86,15 @@
                     <MudText Typo="Typo.body2">
                         <b>Collector Number:</b> No. @prototypeTicket.CollectorNumber
                     </MudText>
-                    <MudText Typo="Typo.body2"><b>Variant:</b> 0</MudText>
+                    @{
+                        if (@prototypeTicket.Variant.HasValue)
+                        {
+                            <MudText Typo="Typo.body2">
+                                <b>Variant:</b> @prototypeTicket.Variant
+                            </MudText>
+                        }
+                    }
+                    
                     <MudText Typo="Typo.body2">
                         <b>Estimated Secondary Market Value:</b> 
                         $ @prototypeTicket.EstimatedEbaySalePrice
@@ -93,7 +104,11 @@
                     <MudChip Label="true"
                              Color="Color.Primary"
                              Size="Size.Large">
-                        #@prototypeTicket.CollectorNumber (0)
+                        @{
+                            string chipVariant = prototypeTicket.Variant == null ? "" : " (" +
+                                prototypeTicket.Variant + ")";
+                        }
+                        #@prototypeTicket.CollectorNumber @chipVariant
                     </MudChip>
                 </MudCardContent>
             </MudCard>
